--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -512,110 +512,97 @@ If you paid a single amount out of an RPP or a DPSP to an individual or you tran
 </div>
 
 <section  class="mrgn-tp-md" id="details-codes"> 
-<details id="cd014">
-  <summary>Code 014&nbsp;– Recipient's number</summary> 
-  <p>If you wish, you can enter a retiree number, an employee number, or a payroll number. In the "Other information" area, enter code&nbsp;<strong>014</strong> and the recipient's number. If you prefer, you can enter the recipient's number in the "Recipient's name" area of the T4A&nbsp;slip. The recipient address area cannot be used for this purpose.</p> 
+<details><summary>Code 014&nbsp;– Recipient's number</summary> 
+  <p id="cd014">If you wish, you can enter a retiree number, an employee number, or a payroll number. In the "Other information" area, enter code&nbsp;<strong>014</strong> and the recipient's number. If you prefer, you can enter the recipient's number in the "Recipient's name" area of the T4A&nbsp;slip. The recipient address area cannot be used for this purpose.</p> 
  </details> 
- <details id="cd028">
-  <summary>Code 028 –&nbsp;Other income</summary> 
-  <p>Report any other amount which you do not have to report elsewhere on a T4A&nbsp;slip or other information slip if the amount is more than&nbsp;$500 or if you deducted income tax. In most cases, identified amounts are assigned a separate area for reporting.</p> 
+ <details> <summary>Code 028 –&nbsp;Other income</summary> 
+  <p id="cd028">Report any other amount which you do not have to report elsewhere on a T4A&nbsp;slip or other information slip if the amount is more than&nbsp;$500 or if you deducted income tax. In most cases, identified amounts are assigned a separate area for reporting.</p> 
     <p>Do not report payments of fees for services under code&nbsp;<strong>028</strong>. These payments should be reported in box 048&nbsp;– Fees for services.</p> 
 	<p>Employees who are eligible to claim the northern residents deduction for travel benefits will use the information included in boxes 32 and 33 of their T4 slip to correctly calculate their deduction on form T2222, Northern Residents Deductions for 2021.</p>
  </details> 
- <details id="cd030">
-  <summary>Code 030 – Patronage allocations</summary> 
-  <p>Report all allocations you gave to customers for their patronage. This includes payments you made in cash or in kind, by certificate of indebtedness, issue of shares, <span class="nowrap">set-off,</span> assignment, or in any other way. Your allocations should be in proportion to the patronage.</p> 
+ <details> <summary>Code 030 – Patronage allocations</summary> 
+  <p id="cd030">Report all allocations you gave to customers for their patronage. This includes payments you made in cash or in kind, by certificate of indebtedness, issue of shares, <span class="nowrap">set-off,</span> assignment, or in any other way. Your allocations should be in proportion to the patronage.</p> 
  </details> 
- <details id="cd032">
-  <summary>Code 032 –&nbsp;Registered pension plan contributions (past service)</summary> 
-  <p>Report the contributions a former employee made to buy past service. The plan administrator usually&nbsp;fills out&nbsp;the T4A&nbsp;slip when an employer-employee relationship no longer exists. Include any instalment interest paid for past service contributions. Instalment interest is the portion of contributions that represents the amount charged to buy past service over time. In the "Other information" area, enter code&nbsp;<strong>032</strong> and the amount of the payment.</p> 
+
+ <details> <summary>Code 032 –&nbsp;Registered pension plan contributions (past service)</summary> 
+  <p id="cd032">Report the contributions a former employee made to buy past service. The plan administrator usually&nbsp;fills out&nbsp;the T4A&nbsp;slip when an employer-employee relationship no longer exists. Include any instalment interest paid for past service contributions. Instalment interest is the portion of contributions that represents the amount charged to buy past service over time. In the "Other information" area, enter code&nbsp;<strong>032</strong> and the amount of the payment.</p> 
   <p>Past service contributions for 1989 or earlier years while a contributor, include the amount twice, using both code&nbsp;<strong>032</strong> and code&nbsp;<strong>126</strong>.</p> 
   <p>Past service contributions for 1989 or earlier years while not a contributor, include the amount twice, using both code <strong>032</strong> and code <strong>162</strong>.</p> 
  </details> 
- <details id="cd034">
-  <summary>Code 034 – Pension adjustment</summary> 
-  <p>If you are the plan administrator for a multi-employer plan (MEP), you should report, in dollars only, the amount of <abbr title="pension adjustment">PA</abbr> an employee has under an <abbr title="registered pension plan">RPP</abbr> during a period of leave or reduced services. For periods of leave or reduced services not under a MEP, report the PA on a T4 slip.</p> 
+
+ <details> <summary>Code 034 – Pension adjustment</summary> 
+  <p  id="cd034">If you are the plan administrator for a multi-employer plan (MEP), you should report, in dollars only, the amount of <abbr title="pension adjustment">PA</abbr> an employee has under an <abbr title="registered pension plan">RPP</abbr> during a period of leave or reduced services. For periods of leave or reduced services not under a MEP, report the PA on a T4 slip.</p> 
  </details> 
- <details id="cd036">
-  <summary>Code 036 – Plan registration number</summary> 
-  <p>Enter the registration number we issued for the <abbr title="registered pension plan">RPP</abbr> or <abbr title="deferred profit-sharing plan">DPSP</abbr>, in which an employee participates, and which gave rise to the <abbr title="pension adjustment">PA</abbr> you are reporting. You have to report the plan number even if your plan requires only employer contributions. If you made contributions to more than one plan for the employee, enter only the number of the plan under which the employee has the largest <abbr title="pension adjustment">PA</abbr>.</p> 
+ <details>  <summary>Code 036 – Plan registration number</summary> 
+  <p id="cd036">Enter the registration number we issued for the <abbr title="registered pension plan">RPP</abbr> or <abbr title="deferred profit-sharing plan">DPSP</abbr>, in which an employee participates, and which gave rise to the <abbr title="pension adjustment">PA</abbr> you are reporting. You have to report the plan number even if your plan requires only employer contributions. If you made contributions to more than one plan for the employee, enter only the number of the plan under which the employee has the largest <abbr title="pension adjustment">PA</abbr>.</p> 
   <p>Enter registration numbers (not more than three) for any additional plans on lines 071, 072, and 073 of the T4A summary.</p> 
  </details> 
- <details id="cd037">
-  <summary>Code 037 – Advanced life deferred annuity purchase</summary> 
-  <p>An ALDA is a new type of annuity where the annuitant can defer commencing annuity payments up until the end of the year they turn 85 years of age.</p> 
+ <details >  <summary>Code 037 – Advanced life deferred annuity purchase</summary> 
+  <p id="cd037">An ALDA is a new type of annuity where the annuitant can defer commencing annuity payments up until the end of the year they turn 85 years of age.</p> 
   <p>Report the total annuity amount purchased. If an amount exceeding the individual’s lifetime limit has been purchased, the excess amount that is transferred back to a qualified registered plan must be reported as a negative amount in this box.<strong> Do not report this amount in box 024</strong>.</p> 
   </details> 
- <details id="cd040">
-  <summary>Code 040 – RESP accumulated income payments</summary> 
-  <p>If you are the promoter of a RESP and you paid <abbr title="registered education savings plan">RESP</abbr> accumulated income payments to a subscriber of the plan, report this amount in the "Other information" area using code&nbsp;<strong>040</strong>.</p> 
+ <details>  <summary>Code 040 – RESP accumulated income payments</summary> 
+  <p id="cd040">If you are the promoter of a RESP and you paid <abbr title="registered education savings plan">RESP</abbr> accumulated income payments to a subscriber of the plan, report this amount in the "Other information" area using code&nbsp;<strong>040</strong>.</p> 
   <p>If the subscriber and the subscriber's spouse or common-law partner are deceased and you pay the <abbr title="registered education savings plan">RESP</abbr> accumulated income payments to someone else, in the "Other information" area enter code <strong>122</strong> and the amount of the payment.</p> 
   
     <p>The regular tax on lump-sum payments <strong>and</strong> an additional tax of 20% (12% for Quebec) may apply to accumulated income payments.</p> 
    
  </details> 
- <details id="cd042">
-  <summary>Code 042 – RESP educational assistance payments</summary> 
-  <p>If you are the promoter of an RESP, and you paid <abbr title="registered education savings plan">RESP</abbr> educational assistance payments (amounts other than a refund of contributions) to or for an individual to help further their education at a post-secondary school level, report this amount in the "Other information" area using code <strong>042</strong> on the T4A slip. </p>
+<details >  <summary>Code 042 – RESP educational assistance payments</summary> 
+  <p id="cd042">If you are the promoter of an RESP, and you paid <abbr title="registered education savings plan">RESP</abbr> educational assistance payments (amounts other than a refund of contributions) to or for an individual to help further their education at a post-secondary school level, report this amount in the "Other information" area using code <strong>042</strong> on the T4A slip. </p>
 <p>Learn more <a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/registered-education-savings-plans-resps/payments-resp/educational-assistance-payments-eaps.html">Educational Assistance Payments (EAPs)</a></p> 
  </details> 
- <details id="cd046">
-  <summary>Code 046 – Charitable donations</summary> 
-  <p>Report the amount you deducted from the recipients' earnings for donations to registered charities in Canada in the "Other information" area using code&nbsp;<strong>046</strong>. </p>
+
+ <details >  <summary>Code 046 – Charitable donations</summary> 
+  <p id="cd046">Report the amount you deducted from the recipients' earnings for donations to registered charities in Canada in the "Other information" area using code&nbsp;<strong>046</strong>. </p>
 <p>Learn more on registered charities in Canada: <a href="https://apps.cra-arc.gc.ca/ebci/hacc/srch/pub/dsplyBscSrch?request_locale=en">List of Charities</a></p> 
  </details> 
- <details id="cd102">
-  <summary>Code 102 – Lump-sum payments – non-resident services transferred under paragraph 60(j)</summary> 
-  <p>Learn more: Lump-sum payments&nbsp;– non-resident in code box 018&nbsp;– Lump-sum payments</p> 
+
+ <details >  <summary>Code 102 – Lump-sum payments – non-resident services transferred under paragraph 60(j)</summary> 
+  <p id="cd102">Learn more: Lump-sum payments&nbsp;– non-resident in code box 018&nbsp;– Lump-sum payments</p> 
  </details> 
- <details id="cd104">
-  <summary>Code 104 – Research grants</summary> 
-  <p>Report the total amount of research grants you paid to the recipient.</p> 
+
+ <details >  <summary>Code 104 – Research grants</summary> 
+  <p id="cd104">Report the total amount of research grants you paid to the recipient.</p> 
  </details> 
- <details id="cd105">
-  <summary>Code 105 – Scholarships, fellowships, bursaries, and artists' project grants</summary> 
-  <p>An amount reported here for Postdoctoral Fellowship income must also be reported using code 210 – Postdoctoral Fellowship income. </p>
+
+ <details>  <summary>Code 105 – Scholarships, fellowships, bursaries, and artists' project grants</summary> 
+  <p id="cd105">An amount reported here for Postdoctoral Fellowship income must also be reported using code 210 – Postdoctoral Fellowship income. </p>
 <p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/canada-pension-plan-cpp-employment-insurance-ei-rulings/cpp-ei-explained/canada-pension-plan-employment-insurance-explained-4.html">Post-doctoral fellows</a></p>
  </details> 
- <details id="cd106">
-  <summary>Code 106 – Death benefits</summary> 
-  <p>Report the gross amount (includes the non-taxable portion) of any payment made (including a payment to a surviving spouse, <span class="nowrap">common-law</span> partner, heir, or estate) on or after the death of an employee to recognize the employee's service in an office or employment.</p> 
+
+ <details>  <summary>Code 106 – Death benefits</summary> 
+  <p id="cd106">Report the gross amount (includes the non-taxable portion) of any payment made (including a payment to a surviving spouse, <span class="nowrap">common-law</span> partner, heir, or estate) on or after the death of an employee to recognize the employee's service in an office or employment.</p> 
  </details> 
- <details id="cd107">
-  <summary>Code 107 – Payments from a wage-loss replacement plan</summary> 
-  <p>Report benefits paid under a wage-loss replacement plan where you do not have to withhold&nbsp;Canada Pension Plan (CPP) contributions and/or Employment Insurance (EI) premiums.</p>
+
+ <details>  <summary>Code 107 – Payments from a wage-loss replacement plan</summary> 
+  <p id="cd107">Report benefits paid under a wage-loss replacement plan where you do not have to withhold&nbsp;Canada Pension Plan (CPP) contributions and/or Employment Insurance (EI) premiums.</p>
   </details> 
- <details id="cd108">
-  <summary>Code 108 – Lump-sum payments from a registered pension plan (RPP) that you cannot transfer</summary> 
-  <p>Learn more: Amounts not eligible for transfer in Box 018&nbsp;–&nbsp;Lump-sum payments</p> 
+ <details >  <summary>Code 108 – Lump-sum payments from a registered pension plan (RPP) that you cannot transfer</summary> 
+  <p id="cd108">Learn more: Amounts not eligible for transfer in Box 018&nbsp;–&nbsp;Lump-sum payments</p> 
  </details> 
- <details id="cd109">
-  <summary>Code 109 – Periodic payments from an unregistered plan</summary> 
-  <p>Enter pension benefits you paid from a pension fund or plan that is not registered.</p> 
+ <details >  <summary>Code 109 – Periodic payments from an unregistered plan</summary> 
+  <p id="cd109">Enter pension benefits you paid from a pension fund or plan that is not registered.</p> 
  </details> 
- <details id="cd110">
-  <summary>Code 110 – Lump-sum payments accrued to <span class="nowrap">December 31, 1971</span></summary> 
-  <p>Learn more: Special situations, box 018&nbsp;–&nbsp; Lump-sum payments</p> 
+ <details >  <summary>Code 110 – Lump-sum payments accrued to <span class="nowrap">December 31, 1971</span></summary> 
+  <p id="cd110">Learn more: Special situations, box 018&nbsp;–&nbsp; Lump-sum payments</p> 
  </details> 
- <details id="cd111">
-  <summary>Code 111 – Income averaging annuity contracts (IAAC)</summary> 
-  <p>Learn more: Box 024 – Annuities</p> 
+ <details >  <summary>Code 111 – Income averaging annuity contracts (IAAC)</summary> 
+  <p id="cd111">Learn more: Box 024 – Annuities</p> 
  </details> 
- <details id="cd115">
-  <summary>Code 115 –&nbsp;Deferred profit sharing plan (DPSP) annuity or instalment payments</summary> 
-  <p>Learn more: Box 024 – Annuities</p> 
+
+ <details >  <summary>Code 115 –&nbsp;Deferred profit sharing plan (DPSP) annuity or instalment payments</summary> 
+  <p id="cd115">Learn more: Box 024 – Annuities</p> 
  </details> 
- <details id="cd116">
-  <summary>Code 116 – Medical travel assistance</summary> 
-   <p>If an employee usually lives in a prescribed zone and works at a special work site in a prescribed zone, a third party providing the benefit must report any non-business travel assistance (including medical travel assistance) in Other information using code <strong>028</strong>. </p>
+
+ <details >  <summary>Code 116 – Medical travel assistance</summary> 
+   <p id="cd116">If an employee usually lives in a prescribed zone and works at a special work site in a prescribed zone, a third party providing the benefit must report any non-business travel assistance (including medical travel assistance) in Other information using code <strong>028</strong>. </p>
    <p>Separate the medical travel from the other non-business travel. Report the medical travel amount in Other information using code <strong>116</strong>.</p>
 <p>Employees who are eligible to claim the northern residents deduction for travel benefits will use the information included in boxes 32 and 33 of their T4 slip to correctly calculate their deduction on form T2222, Northern Residents Deductions for 2021.</p>
-
  </details> 
  
-<details id="cd117">
-  <summary>Code 117 – Loan benefits</summary> 
-  <p>Report the benefits of a loan that a person or partnership received as a shareholder or related to a shareholder.</p> 
+<details >  <summary>Code 117 – Loan benefits</summary> 
+  <p id="cd117">Report the benefits of a loan that a person or partnership received as a shareholder or related to a shareholder.</p> 
  </details> 
 
 <details id="cd118"><summary>Code 118 – Medical premium benefits</summary> 
