--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -711,72 +711,66 @@ If you paid a single amount out of an RPP or a DPSP to an individual or you tran
   <p>Report payments under the Labour Adjustment Benefits Act or a benefit payable under the Appropriation Acts to compensate for loss of office or employment, such as in the textile and <span class="nowrap">leather-tanning</span> industries.</p> 
  </details> 
  
- <details id="cd152">
-  <summary>Code 152 – SUBP qualified under the Income Tax Act</summary> 
-  <p>Report payments received under a registered SUBP that is registered under the Income Tax Act (not including maternity/parental top ups which are included on a T4&nbsp;slip).</p> 
+ <details>  <summary>Code 152 – SUBP qualified under the Income Tax Act</summary> 
+  <p  id="cd152">Report payments received under a registered SUBP that is registered under the Income Tax Act (not including maternity/parental top ups which are included on a T4&nbsp;slip).</p> 
  </details> 
  
- <details id="cd154">
-  <summary>Code 154 – Cash award or prize from payer</summary> 
-  <p>Report an award or prize paid directly from a manufacturer to the employee of a dealer or other sales organization.</p>
+ <details>  <summary>Code 154 – Cash award or prize from payer</summary> 
+  <p  id="cd154">Report an award or prize paid directly from a manufacturer to the employee of a dealer or other sales organization.</p>
 <p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/gifts.html">Gifts, awards, and long-service awards</a></p> 
  </details> 
- <details id="cd156">
-  <summary>Code 156 – Bankruptcy settlement</summary> 
-  <p>Report amounts paid by a trustee in bankruptcy to employees of a bankrupt corporation in settlement of claims filed for wages that the bankrupt employer did not pay.</p> 
- </details> 
- <details id="cd158">
-  <summary>Code 158 – Lump-sum payments that you cannot transfer that are not reported elsewhere</summary> 
- <p>Learn more: Special situations in box 018 - Lump-sum payments.</p>   
- </details> 
- <details id="cd162">
-  <summary>Code 162 – Pre-1990 Past services contributions while not a contributor</summary> 
-  <p>Learn more: Code 032 – Registered pension plan contributions (past service).</p> 
- </details> 
- <details id="cd180">
-  <summary>Code 180 – Lump-sum payments from a deferred profit-sharing plan (DPSP) that you cannot transfer</summary> 
-  <p>Learn more: Deferred profit-sharing plan (DPSP) and Amounts not eligible for transfer, under “Special situations” in box 018 - Lump-sum payments.</p> 
- </details> 
- <details id="cd190">
-  <summary>Code 190 – Lump-sum payments from an unregistered plan</summary> 
-  <p>Learn more: Box 018 - Lump-sum payments.</p> 
- </details> 
- <details id="cd194">
 
-  <summary>Code 194 – PRPP payments</summary> 
-  <p>Report the amount of the annuity payments from taxable income or withdrawals from a PRPP at any age.</p> 
+ <details>  <summary>Code 156 – Bankruptcy settlement</summary> 
+  <p  id="cd156">Report amounts paid by a trustee in bankruptcy to employees of a bankrupt corporation in settlement of claims filed for wages that the bankrupt employer did not pay.</p> 
  </details> 
- <details id="cd195">
-  <summary>Code 195 – Indian (exempt income) – PRPP payments</summary> 
-  <p>Report the amount of Pooled registered pension plan (PRPP) payments that are exempt income for Indians.</p> 
+ 
+<details>  <summary>Code 158 – Lump-sum payments that you cannot transfer that are not reported elsewhere</summary> 
+ <p  id="cd158">Learn more: Special situations in box 018 - Lump-sum payments.</p>   
  </details> 
- <details id="cd196">
-  <summary>Code 196 – Tuition assistance for adult basic education</summary> 
-  <p>Report the amount of funding or other financial assistance you paid on behalf of the individual for tuition fees for the individual’s adult basic education training provided under a program established under the authority of the Department of Employment and Social Development Act (such as the Canada Job Grant program). This amount, which is eligible for the adult basic education tuition assistance deduction, is also included in code&nbsp;105.</p> 
+ 
+<details>  <summary>Code 162 – Pre-1990 Past services contributions while not a contributor</summary> 
+  <p  id="cd162">Learn more: Code 032 – Registered pension plan contributions (past service).</p> 
+ </details> 
+
+ <details>  <summary>Code 180 – Lump-sum payments from a deferred profit-sharing plan (DPSP) that you cannot transfer</summary> 
+  <p  id="cd180">Learn more: Deferred profit-sharing plan (DPSP) and Amounts not eligible for transfer, under “Special situations” in box 018 - Lump-sum payments.</p> 
+ </details> 
+ 
+<details>  <summary>Code 190 – Lump-sum payments from an unregistered plan</summary> 
+  <p  id="cd190">Learn more: Box 018 - Lump-sum payments.</p> 
+ </details> 
+
+ <details>  <summary>Code 194 – PRPP payments</summary> 
+  <p  id="cd194">Report the amount of the annuity payments from taxable income or withdrawals from a PRPP at any age.</p> 
+ </details> 
+
+ <details>  <summary>Code 195 – Indian (exempt income) – PRPP payments</summary> 
+  <p id="cd195">Report the amount of Pooled registered pension plan (PRPP) payments that are exempt income for Indians.</p> 
+ </details> 
+ <details>  <summary>Code 196 – Tuition assistance for adult basic education</summary> 
+  <p id="cd196">Report the amount of funding or other financial assistance you paid on behalf of the individual for tuition fees for the individual’s adult basic education training provided under a program established under the authority of the Department of Employment and Social Development Act (such as the Canada Job Grant program). This amount, which is eligible for the adult basic education tuition assistance deduction, is also included in code&nbsp;105.</p> 
   <p>Generally, adult basic education is primary or secondary level education, or other forms of training where tuition fees paid for the training would not be eligible in calculating the tuition tax credit; for example, training provided by an educational institution that is not certified by Employment and Social Development Canada.</p> 
  </details> 
-<details id="cd200">
-  <summary>Code 200 – Provincial/Territorial COVID-19 financial assistance payments</summary> 
-<p>Report amounts that were paid as financial assistance by a provincial or territorial government to support individuals affected by COVID-19 and that are taxable under subparagraphs 56(1)(r)(i) or (iv), or clause 56(1)(r)(iv.1)(E) of the Income Tax Act, minus any amounts repaid within the same tax year.</p>
+
+<details>  <summary>Code 200 – Provincial/Territorial COVID-19 financial assistance payments</summary> 
+<p id="cd200">Report amounts that were paid as financial assistance by a provincial or territorial government to support individuals affected by COVID-19 and that are taxable under subparagraphs 56(1)(r)(i) or (iv), or clause 56(1)(r)(iv.1)(E) of the Income Tax Act, minus any amounts repaid within the same tax year.</p>
  </details> 
-<details id="cd201">
-  <summary>Code 201 – Repayment of COVID-19 financial assistance</summary> 
-   <p>Report the amount of federal, provincial or territorial COVID-19 financial assistance payments that were repaid in the year in respect of an overpayment of federal, provincial or territorial COVID-19 financial assistance payments received in a prior year. </p>
+
+<details>  <summary>Code 201 – Repayment of COVID-19 financial assistance</summary> 
+   <p id="cd201">Report the amount of federal, provincial or territorial COVID-19 financial assistance payments that were repaid in the year in respect of an overpayment of federal, provincial or territorial COVID-19 financial assistance payments received in a prior year. </p>
  </details> 
- <details id="cd205">
- <summary>Code 205 – One-time payment for older seniors</summary> 
- <p>Report $500 for the supplementary OAS payment made in 2021.</p>
+
+ <details > <summary>Code 205 – One-time payment for older seniors</summary> 
+ <p id="cd205">Report $500 for the supplementary OAS payment made in 2021.</p>
  <p>For 2021 and later tax years, new income code 205 has been introduced to report the one-time supplementary OAS payment of $500 paid to older seniors, residing in Canada or abroad, if they:</p>
 <ul><li>Were born on or before June 30, 1947, and</li>
 <li>Were eligible for the Old Age Security (OAS) pension in June 2021</li></ul>
 <p>This supplementary payment is to be reported on the T4A slip, and <strong>not</strong> the T4A(OAS).</p> 
 <p>Learn more: <a href="/en/services/benefits/publicpensions/cpp/old-age-security/one-time-payment-older-seniors.html"> One-time payment for older seniors</a></p>
-
    </details> 
- <details id="cd210">
-  <summary>Code 210 – Postdoctoral Fellowship Income</summary> 
 
-  <p>Report the amount of postdoctoral fellowship income.</p>
+ <details>  <summary>Code 210 – Postdoctoral Fellowship Income</summary> 
+  <p id="cd210">Report the amount of postdoctoral fellowship income.</p>
   <p>For 2021 and later tax years, new income code 210 has been introduced to report Postdoctoral Fellowship income. An amount reported here must also be included using code 105 – Scholarships, fellowships, bursaries, and artists' project grants.</p></details>
 </section>
 
